[project]
name = 'visitviewer'
version = '0.2.0'
authors = [{name = "Marshall Perrin", email = "mperrin@stsci.edu"}]
dependencies = [
    'matplotlib > 3',
    'jwst_gtvt',
    'pysiaf'
]
license = {file = "LICENSE.md"}
readme = "README.md"

[project.scripts]
'visitviewer' = 'visitviewer:main'


[build-system]
requires = [
    "setuptools>=38.2.5",
    "wheel",
    "setuptools_scm"
]

