[metadata]
package_name = visitviewer
description = JWST Visit Viewer
long_description = JWST-internal package for viewing observation visit files prior to upload
author = Marshall Perrin
author_email = mperrin@stsci.edu
license = BSD
edit_on_github = False
github_project = spacetelescope/jwst_visit_viewer
description-file = README.rst
url = https://github.com/spacetelescope/jwst_visit_viewer
homepage = https://github.com/spacetelescope/jwst_visit_viewer

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build relic

[flake8]
# See http://flake8.pycqa.org/en/latest/user/configuration.html

[entry_points]

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
